--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>TutorSite | Home</title>
+  <title>Reboot Learning | Home</title>
   <link rel="stylesheet" href="dist/style.css"/>
 </head>
 <body class="bg-gray-50 text-gray-900">
@@ -12,7 +12,7 @@
   <div class="mx-auto max-w-6xl px-4 py-3 flex items-center justify-between">
     <a href="index.html" class="flex items-center gap-2 font-bold text-lg">
       <span class="inline-flex h-9 w-9 items-center justify-center rounded-xl bg-blue-600 text-white">TS</span>
-      <span>TutorSite</span>
+      <span>Reboot Learning</span>
     </a>
     <nav class="hidden md:flex items-center gap-6 text-sm">
       <a class="hover:text-blue-700" href="index.html">Home</a>
@@ -184,7 +184,7 @@
         <span class="inline-flex h-9 w-9 items-center justify-center rounded-xl bg-blue-600 text-white">TS</span>
         TutorSite
       </div>
-      <p class="mt-3 text-sm text-gray-600">Modern tutoring website template: courses + booking + social proof. Replace the text/images and go live.</p>
+      <p class="mt-3 text-sm text-gray-600">Tutoring website</p>
     </div>
     <div class="text-sm">
       <p class="font-semibold">Pages</p>
@@ -195,7 +195,7 @@
     </div>
     <div class="text-sm">
       <p class="font-semibold">Contact</p>
-      <p class="mt-3 text-gray-600">hello@yourdomain.com</p>
+      <p class="mt-3 text-gray-600">hello@rebootlearning.co.uk</p>
       <p class="text-gray-600">London, UK</p>
     </div>
   </div>
