--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div>
         <p class="inline-flex items-center gap-2 rounded-full bg-blue-50 px-3 py-1 text-xs font-semibold text-blue-700">GCSE / A‑Level • 1‑to‑1 • Online courses</p>
         <h1 class="mt-4 text-4xl font-extrabold tracking-tight md:text-5xl">Boost grades with structured tutoring and clear video lessons.</h1>
-        <p class="mt-4 text-lg text-gray-600">A modern tutor website template you can customise: booking + courses + testimonials. Built for speed and conversion.</p>
+        <p class="mt-4 text-lg text-gray-600">Book a session or choose a course</p>
         <div class="mt-6 flex flex-wrap gap-3">
           <a href="book-session.html" class="rounded-xl bg-blue-600 px-5 py-3 text-sm font-semibold text-white hover:bg-blue-700">Book a session</a>
           <a href="courses.html" class="rounded-xl border border-gray-300 bg-white px-5 py-3 text-sm font-semibold hover:bg-gray-100">View courses</a>
@@ -65,7 +65,7 @@
         </div>
         <div class="mt-4 rounded-3xl bg-white p-5 shadow-soft">
           <p class="text-sm font-semibold">Quick sample lesson</p>
-          <p class="mt-1 text-sm text-gray-600">Swap this for your YouTube/Vimeo embed.</p>
+          <p class="mt-1 text-sm text-gray-600">Videos</p>
           <div class="mt-4 aspect-video w-full overflow-hidden rounded-2xl bg-gray-100">
             <iframe class="h-full w-full" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Sample lesson" allowfullscreen></iframe>
           </div>
@@ -182,7 +182,7 @@
     <div>
       <div class="flex items-center gap-2 font-bold">
         <span class="inline-flex h-9 w-9 items-center justify-center rounded-xl bg-blue-600 text-white">TS</span>
-        TutorSite
+        Reboot Learning
       </div>
       <p class="mt-3 text-sm text-gray-600">Tutoring website</p>
     </div>
@@ -199,7 +199,7 @@
       <p class="text-gray-600">London, UK</p>
     </div>
   </div>
-  <div class="border-t border-gray-200 py-4 text-center text-xs text-gray-500">© 2026 TutorSite. All rights reserved.</div>
+  <div class="border-t border-gray-200 py-4 text-center text-xs text-gray-500">© 2026 Reboot Learn. All rights reserved.</div>
 </footer>
 
 <script src="assets/main.js"></script>
