--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <p class="text-sm font-semibold">Quick sample lesson</p>
           <p class="mt-1 text-sm text-gray-600">Videos</p>
           <div class="mt-4 aspect-video w-full overflow-hidden rounded-2xl bg-gray-100">
-            <iframe class="h-full w-full" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Sample lesson" allowfullscreen></iframe>
+            <iframe class="h-full w-full" src="https://www.youtube.com/embed/_C5AHaS1mOA?si=ej_KD254l2uayXZs" title="Sample lesson" allowfullscreen></iframe>
           </div>
         </div>
       </div>
