--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </div>
       <div class="rounded-3xl bg-white p-6 shadow-soft">
         <p class="text-sm font-semibold">Course + tutoring</p>
-        <p class="mt-2 text-gray-600">Sell a course first, then upsell 1‑to‑1 for personalised support.</p>
+        <p class="mt-2 text-gray-600">choose your course</p>
       </div>
       <div class="rounded-3xl bg-white p-6 shadow-soft">
         <p class="text-sm font-semibold">Built for speed</p>
