--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         <p class="mt-2 text-gray-600">choose your course</p>
       </div>
       <div class="rounded-3xl bg-white p-6 shadow-soft">
-        <p class="text-sm font-semibold">Built for speed</p>
-        <p class="mt-2 text-gray-600">Static pages + Tailwind. Great performance and simple hosting.</p>
+        <p class="text-sm font-semibold">Built for success</p>
+        <p class="mt-2 text-gray-600"></p>
       </div>
     </div>
   </section>
