--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       <p class="text-gray-600">London, UK</p>
     </div>
   </div>
-  <div class="border-t border-gray-200 py-4 text-center text-xs text-gray-500">© 2026 Reboot Learn. All rights reserved.</div>
+  <div class="border-t border-gray-200 py-4 text-center text-xs text-gray-500">© 2026 Reboot Learning. All rights reserved.</div>
 </footer>
 
 <script src="assets/main.js"></script>
