--- a/courses.html
+++ b/courses.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>TutorSite | Courses</title>
+  <title>Reboot Learning | Courses</title>
   <link rel="stylesheet" href="dist/style.css"/>
 </head>
 <body class="bg-gray-50 text-gray-900">
@@ -11,8 +11,8 @@
 <header class="sticky top-0 z-50 bg-white/90 backdrop-blur border-b border-gray-200">
   <div class="mx-auto max-w-6xl px-4 py-3 flex items-center justify-between">
     <a href="index.html" class="flex items-center gap-2 font-bold text-lg">
-      <span class="inline-flex h-9 w-9 items-center justify-center rounded-xl bg-blue-600 text-white">TS</span>
-      <span>TutorSite</span>
+      <span class="inline-flex h-9 w-9 items-center justify-center rounded-xl bg-blue-600 text-white">RL</span>
+      <span>Reboot Learning</span>
     </a>
     <nav class="hidden md:flex items-center gap-6 text-sm">
       <a class="hover:text-blue-700" href="index.html">Home</a>
