--- a/book-session.html
+++ b/book-session.html
@@ -12,7 +12,7 @@
   <div class="mx-auto max-w-6xl px-4 py-3 flex items-center justify-between">
     <a href="index.html" class="flex items-center gap-2 font-bold text-lg">
       <span class="inline-flex h-9 w-9 items-center justify-center rounded-xl bg-blue-600 text-white">RL</span>
-      <span>Reboot Learnibg</span>
+      <span>Reboot Learning</span>
     </a>
     <nav class="hidden md:flex items-center gap-6 text-sm">
       <a class="hover:text-blue-700" href="index.html">Home</a>
