--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header class="sticky top-0 z-50 bg-white/90 backdrop-blur border-b border-gray-200">
   <div class="mx-auto max-w-6xl px-4 py-3 flex items-center justify-between">
     <a href="index.html" class="flex items-center gap-2 font-bold text-lg">
-      <span class="inline-flex h-9 w-9 items-center justify-center rounded-xl bg-blue-600 text-white">TS</span>
+      <span class="inline-flex h-9 w-9 items-center justify-center rounded-xl bg-blue-600 text-white">RL</span>
       <span>Reboot Learning</span>
     </a>
     <nav class="hidden md:flex items-center gap-6 text-sm">
