--- a/book-session.html
+++ b/book-session.html
@@ -94,8 +94,8 @@
   <div class="mx-auto max-w-6xl px-4 py-10 grid gap-8 md:grid-cols-3">
     <div>
       <div class="flex items-center gap-2 font-bold">
-        <span class="inline-flex h-9 w-9 items-center justify-center rounded-xl bg-blue-600 text-white">TS</span>
-        TutorSite
+        <span class="inline-flex h-9 w-9 items-center justify-center rounded-xl bg-blue-600 text-white">RL</span>
+        Reboot Learning
       </div>
       <p class="mt-3 text-sm text-gray-600">Modern tutoring website template: courses + booking + social proof. Replace the text/images and go live.</p>
     </div>
@@ -108,11 +108,11 @@
     </div>
     <div class="text-sm">
       <p class="font-semibold">Contact</p>
-      <p class="mt-3 text-gray-600">hello@yourdomain.com</p>
+      <p class="mt-3 text-gray-600">hello@rebootlearning.co.uk</p>
       <p class="text-gray-600">London, UK</p>
     </div>
   </div>
-  <div class="border-t border-gray-200 py-4 text-center text-xs text-gray-500">© 2026 TutorSite. All rights reserved.</div>
+  <div class="border-t border-gray-200 py-4 text-center text-xs text-gray-500">© 2026 Reboot Learning. All rights reserved.</div>
 </footer>
 
 <script src="assets/main.js"></script>
