--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
   <div class="mx-auto max-w-6xl px-4 py-10 grid gap-8 md:grid-cols-3">
     <div>
       <div class="flex items-center gap-2 font-bold">
-        <span class="inline-flex h-9 w-9 items-center justify-center rounded-xl bg-blue-600 text-white">TS</span>
+        <span class="inline-flex h-9 w-9 items-center justify-center rounded-xl bg-blue-600 text-white">RL</span>
         Reboot Learning
       </div>
       <p class="mt-3 text-sm text-gray-600">Tutoring website</p>
