--- a/book-session.html
+++ b/book-session.html
@@ -97,7 +97,7 @@
         <span class="inline-flex h-9 w-9 items-center justify-center rounded-xl bg-blue-600 text-white">RL</span>
         Reboot Learning
       </div>
-      <p class="mt-3 text-sm text-gray-600">Modern tutoring website template: courses + booking + social proof. Replace the text/images and go live.</p>
+      <p class="mt-3 text-sm text-gray-600">Tutoring website</p>
     </div>
     <div class="text-sm">
       <p class="font-semibold">Pages</p>
